PROJECT(meteoioplugin)

IF(COMMAND CMAKE_POLICY)
        CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

ADD_LIBRARY( meteoioplugin ${LINKING_MODE}
	meteoioplugin.cc
	meteoioplugin.h
)

TARGET_LINK_LIBRARIES( meteoioplugin
		${GEOTOP_COMMON_LIBRARIES}
		${GEOTOP_PART_SNOW_LIBRARIES}
#		${GEOTOP_METEO_LIBRARIES}
#		${GEOTOP_LIBRARIES}
#		${METEOIO_LIBRARIES}
#		${FLUIDTURTLE_LIBRARIES}
#		${ASCII_LIBRARIES}
#		${GT_UTILITIES_LIBRARIES}
#		${NETCFD_LIBRARIES}
#		${WRF_LIBRARIES}
)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

