pkg_mod = import('pkgconfig')
pkg_mod.generate(version: meson.project_version(),
                 name: meson.project_name(),
                 description: '''GEOtop is a distributed model of the mass and energy balance of the hydrological cycle, which is applicable to simulations in continuum in small catchments. GEOtop deals with the effects of topography on the interaction between energy balance and hydrological cycle with peculiar solutions. ''')

