PROJECT(geotop)

ADD_EXECUTABLE(geotop
  geotop.cc
  )

###########################################################
# add libraries section

#shared library.
# IF(BUILD_SHARED_LIBS)
ADD_LIBRARY(${GEOTOP_PART_SNOW_LIBRARIES} ${LINKING_MODE}
  part_snow.h
  part_snow.cc
  )

ADD_LIBRARY(${GEOTOP_LOGGER} ${LINKING_MODE}
  global_logger.cc
  global_logger.h
  logger.cc
  logger.h
  )
ADD_LIBRARY(${GEOTOP_METEO_LIBRARIES} ${LINKING_MODE}
  meteo.h
  meteo.cc
  meteodistr.cc
  meteodistr.h
  meteodata.cc
  meteodata.h
  times.cc
  times.h

  snow.cc
  snow.h
  turbulence.cc
  turbulence.h
  radiation.cc
  radiation.h
  vegetation.cc
  vegetation.h
  clouds.cc
  clouds.h

  pedo.funct.cc
  pedo.funct.h
  )

ADD_LIBRARY(${INPUT_KEYWORDS_LIBRARIES} ${LINKING_MODE}
  inputKeywords.cc
  inputKeywords.h
  )
ADD_LIBRARY(${GEOTOP_OUTPUT_FILE} ${LINKING_MODE}
  output_file.cc
  output_file.h
  standard_names.h
  standard_names.cc
  )

ADD_LIBRARY(${GEOTOP_COMMON_LIBRARIES} ${LINKING_MODE}
  constants.h
  datastructs.h
  struct.geotop.h
  statevar.h
  statevar.cc
  Energy/energy_class.h
  Energy/energy_class.cc
  Glacier/glacier_class.h
  Glacier/glacier_class.cc
  Meteo/meteo_class.h
  Meteo/meteo_class.cc
  Meteo/meteostations.h
  Meteo/meteostations.cc
  Snow/snow_class.h
  Snow/snow_class.cc
  Soil/soil_class.h
  Soil/soil_class.cc
  Soil/soilstatevar.h
  Soil/soilstatevar.cc
  Soil/vegstatevar.h
  Soil/vegstatevar.cc
  Water/water_class.h
  Water/water_class.cc
  geotop_common.cc
  geotop_common.h
  )

ADD_LIBRARY(${GEOTOP_ENERGY_BALANCE_LIBRARIES} ${LINKING_MODE}
  energy.balance.cc
  energy.balance.h
  )


ADD_LIBRARY(${GEOTOP_WATER_BALANCE_LIBRARIES} ${LINKING_MODE}
  water.balance.cc
  water.balance.h
  )

ADD_LIBRARY(${GEOTOP_LIBRARIES} ${LINKING_MODE}
  PBSM.cc
  PBSM.h
  blowingsnow.cc
  blowingsnow.h
  channels.cc
  channels.h
  indices.cc
  indices.h
  input.cc
  input.h
  output_nc.h
  parameters.cc
  parameters.h
  pure_gt.cc
  pure_gt.h
  recovering.cc
  recovering.h
  )

ADD_LIBRARY(${GEOTOP_OUT_POSTPROC_LIBRARIES} ${LINKING_MODE}
  tables.cc
  tables.h
  output.cc
  output_nc.cc
  output.h
  deallocate.cc
  deallocate.h
  )

ADD_LIBRARY(${GEOTOP_OUT_POSTPROC_LIBRARIES_NEW} ${LINKING_MODE}
  output_new.cc
  output_new.h
  )

###########################################################
# link and install libraries

TARGET_LINK_LIBRARIES(${GEOTOP_OUTPUT_FILE}
  ${GEOTOP_METEO_LIBRARIES}
  ${GEOTOP_LOGGER}
  )
SET_TARGET_PROPERTIES(${GEOTOP_OUTPUT_FILE} PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS ${GEOTOP_OUTPUT_FILE}
  RUNTIME DESTINATION lib/ COMPONENT libraries
  LIBRARY DESTINATION lib/ COMPONENT libraries
  ARCHIVE DESTINATION lib/ COMPONENT libraries
  )

TARGET_LINK_LIBRARIES(${GEOTOP_LOGGER}
  ${GEOTOP_COMMON_LIBRARIES}
  )
SET_TARGET_PROPERTIES(${GEOTOP_LOGGER} PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS ${GEOTOP_LOGGER}
  RUNTIME DESTINATION lib/ COMPONENT libraries
  LIBRARY DESTINATION lib/ COMPONENT libraries
  ARCHIVE DESTINATION lib/ COMPONENT libraries
  )

TARGET_LINK_LIBRARIES(${GEOTOP_COMMON_LIBRARIES}
  ${FLUIDTURTLE_LIBRARIES}
  )
SET_TARGET_PROPERTIES(${GEOTOP_COMMON_LIBRARIES} PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS ${GEOTOP_COMMON_LIBRARIES}
  RUNTIME DESTINATION lib/ COMPONENT libraries
  LIBRARY DESTINATION lib/ COMPONENT libraries
  ARCHIVE DESTINATION lib/ COMPONENT libraries
  )

TARGET_LINK_LIBRARIES(${GEOTOP_PART_SNOW_LIBRARIES}
  ${GEOTOP_COMMON_LIBRARIES}
  )
SET_TARGET_PROPERTIES(${GEOTOP_PART_SNOW_LIBRARIES} PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS ${GEOTOP_PART_SNOW_LIBRARIES}
  RUNTIME DESTINATION lib/ COMPONENT libraries
  LIBRARY DESTINATION lib/ COMPONENT libraries
  ARCHIVE DESTINATION lib/ COMPONENT libraries
  )

TARGET_LINK_LIBRARIES(${GEOTOP_OUT_POSTPROC_LIBRARIES}
  ${GEOTOP_METEO_LIBRARIES}
  )
SET_TARGET_PROPERTIES(${GEOTOP_OUT_POSTPROC_LIBRARIES} PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS ${GEOTOP_OUT_POSTPROC_LIBRARIES}
  RUNTIME DESTINATION lib/ COMPONENT libraries
  LIBRARY DESTINATION lib/ COMPONENT libraries
  ARCHIVE DESTINATION lib/ COMPONENT libraries
  )

TARGET_LINK_LIBRARIES(${GEOTOP_OUT_POSTPROC_LIBRARIES_NEW}
  ${GEOTOP_COMMON_LIBRARIES}
  ${GT_UTILITIES_LIBRARIES}
  ${INPUT_KEYWORDS_LIBRARIES}
  ${GEOTOP_OUTPUT_FILE}
  ${GEOTOP_METEO_LIBRARIES}
  ${GEOTOP_LOGGER}
  )
SET_TARGET_PROPERTIES(${GEOTOP_OUT_POSTPROC_LIBRARIES_NEW} PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS ${GEOTOP_OUT_POSTPROC_LIBRARIES_NEW}
  RUNTIME DESTINATION lib/ COMPONENT libraries
  LIBRARY DESTINATION lib/ COMPONENT libraries
  ARCHIVE DESTINATION lib/ COMPONENT libraries
  )

TARGET_LINK_LIBRARIES(${GEOTOP_METEO_LIBRARIES}
  ${GEOTOP_COMMON_LIBRARIES}
  ${ASCII_LIBRARIES}
  ${GEOTOP_LOGGER}
  )
SET_TARGET_PROPERTIES(${GEOTOP_METEO_LIBRARIES} PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS ${GEOTOP_METEO_LIBRARIES}
  RUNTIME DESTINATION lib/ COMPONENT libraries
  LIBRARY DESTINATION lib/ COMPONENT libraries
  ARCHIVE DESTINATION lib/ COMPONENT libraries
  )

TARGET_LINK_LIBRARIES(${GEOTOP_WATER_BALANCE_LIBRARIES}
  ${GEOTOP_METEO_LIBRARIES}
  )
SET_TARGET_PROPERTIES(${GEOTOP_WATER_BALANCE_LIBRARIES} PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS ${GEOTOP_WATER_BALANCE_LIBRARIES}
  RUNTIME DESTINATION lib/ COMPONENT libraries
  LIBRARY DESTINATION lib/ COMPONENT libraries
  ARCHIVE DESTINATION lib/ COMPONENT libraries
  )

TARGET_LINK_LIBRARIES(${GEOTOP_ENERGY_BALANCE_LIBRARIES}
  ${GEOTOP_METEO_LIBRARIES}
  )
SET_TARGET_PROPERTIES(${GEOTOP_ENERGY_BALANCE_LIBRARIES} PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS ${GEOTOP_ENERGY_BALANCE_LIBRARIES}
  RUNTIME DESTINATION lib/ COMPONENT libraries
  LIBRARY DESTINATION lib/ COMPONENT libraries
  ARCHIVE DESTINATION lib/ COMPONENT libraries
  )

TARGET_LINK_LIBRARIES(${INPUT_KEYWORDS_LIBRARIES}
  ${Boost_FILESYSTEM_LIBRARY}
  ${Boost_THREAD_LIBRARY}
  ${Boost_SYSTEM_LIBRARY}
  ${Boost_IOSTREAMS_LIBRARY}
  ${Boost_REGEX_LIBRARY}
  ${GEOTOP_LOGGER}
  ${GEOTOP_OUTPUT_FILE}
  )
SET_TARGET_PROPERTIES(${INPUT_KEYWORDS_LIBRARIES} PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS ${INPUT_KEYWORDS_LIBRARIES}
  RUNTIME DESTINATION lib/ COMPONENT libraries
  LIBRARY DESTINATION lib/ COMPONENT libraries
  ARCHIVE DESTINATION lib/ COMPONENT libraries
  )

IF(BUILD_STATIC AND NOT BUILD_SHARED_LIBS)
TARGET_LINK_LIBRARIES(${GEOTOP_LIBRARIES}
  ${INPUT_KEYWORDS_LIBRARIES}
  ${GEOTOP_LOGGER}
  ${GEOTOP_OUT_POSTPROC_LIBRARIES}
  ${GEOTOP_OUT_POSTPROC_LIBRARIES_NEW}
  ${GEOTOP_ENERGY_BALANCE_LIBRARIES}
  ${GEOTOP_WATER_BALANCE_LIBRARIES}
  ${GT_UTILITIES_LIBRARIES}
  ${METEOIO_PLUGIN_LIBRARIES}
  ${PROJ_LIBRARIES}
  )
ELSEIF(BUILD_SHARED_LIBS AND NOT BUILD_STATIC)
TARGET_LINK_LIBRARIES(${GEOTOP_LIBRARIES}
  ${INPUT_KEYWORDS_LIBRARIES}
  ${GEOTOP_LOGGER}
  ${GEOTOP_OUT_POSTPROC_LIBRARIES}
  ${GEOTOP_OUT_POSTPROC_LIBRARIES_NEW}
  ${GEOTOP_ENERGY_BALANCE_LIBRARIES}
  ${GEOTOP_WATER_BALANCE_LIBRARIES}
  ${GT_UTILITIES_LIBRARIES}
  ${METEOIO_PLUGIN_LIBRARIES}
  )
ENDIF(BUILD_STATIC AND NOT BUILD_SHARED_LIBS)

SET_TARGET_PROPERTIES(${GEOTOP_LIBRARIES} PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS ${GEOTOP_LIBRARIES}
  RUNTIME DESTINATION lib/ COMPONENT libraries
  LIBRARY DESTINATION lib/ COMPONENT libraries
  ARCHIVE DESTINATION lib/ COMPONENT libraries
  )

TARGET_LINK_LIBRARIES(geotop
  ${GEOTOP_LIBRARIES}
  )
SET_TARGET_PROPERTIES(geotop PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS geotop
  RUNTIME DESTINATION bin/
  )
