src_files += [files(['PBSM.cc',
    'PBSM.h',
    'blowingsnow.cc',
    'blowingsnow.h',
    'channels.cc',
    'channels.h',
    'clouds.cc',
    'clouds.h',
    'constants.h',
    'deallocate.cc',
    'deallocate.h',
    'energy.balance.cc',
    'energy.balance.h',
    'indices.cc',
    'indices.h',
    'input.cc',
    'input.h',
    'keywords.h',
    'logger.cc',
    'logger.h',
    'meteo.cc',
    'meteo.h',
    'meteodata.cc',
    'meteodata.h',
    'meteodistr.cc',
    'meteodistr.h',
    'output.cc',
    'output.h',
    'parameters.cc',
    'parameters.h',
    'pedo.funct.cc',
    'pedo.funct.h',
    'radiation.cc',
    'radiation.h',
    'recovering.cc',
    'recovering.h',
    'snow.cc',
    'snow.h',
    'struct.geotop.h',
    'tables.cc',
    'tables.h',
    'times.cc',
    'times.h',
    'turbulence.cc',
    'turbulence.h',
    'vector.h',
    'vegetation.cc',
    'vegetation.h',
    'warnings.h',
    'water.balance.cc',
    'water.balance.h',])]

_config = files('config.meson.h.in')
