_wm = get_option('WITH_METEOIO')

src_files += [files(['PBSM.cc',
    'PBSM.h',
    'blowingsnow.cc',
    'blowingsnow.h',
    'channels.cc',
    'channels.h',
    'clouds.cc',
    'clouds.h',
    'constants.h',
    'deallocate.cc',
    'deallocate.h',
    'energy.balance.cc',
    'energy.balance.h',
    'indices.cc',
    'indices.h',
    'input.cc',
    'input.h',
    'keywords.h',
    'logger.cc',
    'logger.h',
    'math.optim.h',
    'matrix.h',
    'matrixview.h',
    'meteo.cc',
    'meteo.h',
    'meteodata.cc',
    'meteodata.h',		
    'meteodistr.cc',
    'meteodistr.h',
    'output.cc',
    'output.h',
    'parameters.cc',
    'parameters.h',
    'pedo.funct.h',
    'radiation.cc',
    'radiation.h',
    'recovering.cc',
    'recovering.h',
    'rowview.h',
    'snow.cc',
    'snow.h',
    'struct.geotop.cc',
    'struct.geotop.h',
    'tables.cc',
    'tables.h',
    'tensor.h',
    'timer.cc',
    'timer.h',
    'times.cc',
    'times.h',
    'turbulence.cc',
    'turbulence.h',
    'vector.h',
    'vegetation.cc',
    'vegetation.h',
    'warnings.h',
    'water.balance.cc',
    'water.balance.h',])]

if _wm == true
src_files = src_files + [files([
    'meteoio_wrapper.h',
    'meteoio_plugin.cc',
    'meteoio_plugin.h',])]
endif   

_config = files('config.meson.h.in')
_vcs    = files('version.cc.in')
