src_files += [files(['blowingsnow.c',
    'blowingsnow.h',
    'constants.h',
    'indices.c',
    'meteo.c',
    'output.c',
    'pedo.funct.c',
    'snow.c',
    'times.h',
    'water.balance.h',
    'deallocate.c',
    'indices.h',
    'meteodata.c',
    'output.h',
    'pedo.funct.h',
    'snow.h',
    'turbulence.c',
    'channels.c',
    'deallocate.h',
    'input.c',
    'meteodata.h',
    'parameters.c',
    'radiation.c',
    'struct.geotop.h',
    'turbulence.h'
    'channels.h',
    'energy.balance.c',
    'input.h',
    'meteodistr.c',
    'parameters.h',
    'radiation.h',
    'tables.c',
    'vegetation.c',
    'clouds.c',
    'energy.balance.h',
    'keywords.h',
    'meteodistr.h',
    'PBSM.c',
    'recovering.c',
    'tables.h',
    'vegetation.h',
    'clouds.h',
    'geotop.c',
    'meson.build',
    'meteo.h',
    'PBSM.h',
    'recovering.h',
    'times.c',
    'water.balance.c',])]

_config = files('config.meson.h.in')
