PROJECT(gt_utilities)

IF(COMMAND CMAKE_POLICY)
        CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

ADD_LIBRARY( gt_utilities ${LINKING_MODE}
			read_command_line.cc
			read_command_line.h
			path_utils.h
			path_utils.c
			geomorphology.h
			geomorphology.cc
			turtle.h
			math_utils.h
			math_utils.cc
)

TARGET_LINK_LIBRARIES( gt_utilities
      ${METEOIO_LIBRARIES}
)

SET_TARGET_PROPERTIES(gt_utilities PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS gt_utilities
  RUNTIME DESTINATION lib/ COMPONENT libraries
  LIBRARY DESTINATION lib/ COMPONENT libraries
  ARCHIVE DESTINATION lib/ COMPONENT libraries
  )
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

