PROJECT(meteoioplugin)

IF(COMMAND CMAKE_POLICY)
        CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

ADD_LIBRARY( meteoioplugin ${LINKING_MODE}
	meteoioplugin.cc
	meteoioplugin.h
)

TARGET_LINK_LIBRARIES( meteoioplugin
		${GEOTOP_COMMON_LIBRARIES}
		${GEOTOP_PART_SNOW_LIBRARIES}
#		${GEOTOP_METEO_LIBRARIES}
#		${GEOTOP_LIBRARIES}
#		${METEOIO_LIBRARIES}
#		${FLUIDTURTLE_LIBRARIES}
#		${ASCII_LIBRARIES}
#		${GT_UTILITIES_LIBRARIES}
#		${NETCFD_LIBRARIES}
#		${WRF_LIBRARIES}
)

SET_TARGET_PROPERTIES(meteoioplugin PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/geotop_src/"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/geotop_src/"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/geotop_src/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS meteoioplugin
  RUNTIME DESTINATION lib/geotop_src/ COMPONENT libraries
  LIBRARY DESTINATION lib/geotop_src/ COMPONENT libraries
  ARCHIVE DESTINATION lib/geotop_src/ COMPONENT libraries
  )

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

